css/screen.scss
---
# Front matter comment to ensure Jekyll properly reads file.
---

@import "reset.scss";
@import "colors.scss";
@import "mixins.scss";
@import "fonts.scss";


body {
	background: #fff;;
	font-family: $helvetica;
	background: $lightgrey;
	
}

.wrapper {
	width: 100%;
	min-width: 1350px;
	margin: 0 auto;
	position: relative;
}

h1.title {
	font-size: 7rem;
	letter-spacing: -.1rem;
	text-align: center;
	color: $orange;
	margin: 4rem auto 0;
}

.steamwrap {
	width: 58rem;
	margin: 0 auto;
	position: relative;

	.smoke {
		position: absolute;
		width: 100%;
		height: 550px;
		background:url('../img/smoke-texture.png') no-repeat;
		bottom: 150px;
		margin-left: 0px;
	}
}

.steamer {
	position: relative;
	margin: 3rem auto 0;
	display: block;
	width: 100%;

	// this is for the animation
	left: -100rem;

	// if no js, then keep the trumplings where they belong
	.no-js & {
		left: 0;
	}
}

.trumpling {
	position: absolute;
	z-index: 5;
	width: 14rem;


	// this is for the animation
	top: -62rem;

	// if no js, then keep the trumplings where they belong
	.no-js & {
		top: 0;
	}
	
	&#uno {
		left: 9rem;
		margin-top: 16rem;
		z-index: 10
	}

	&#dos {
		left: 16rem;
		margin-top: 7rem;
		z-index: 8
	}

	&#tres {
		left: 23rem;
		margin-top: 19rem;
		z-index: 10;
		width: 15rem;
	}

	&#cuatro {
		left: 30rem;
		margin-top: 6rem;
		z-index: 8;
		width: 13rem;
	}

	&#cinco {
		left: 37rem;
		margin-top: 13rem;
		z-index: 9;
		width: 15rem;
	}

}

.chopsticks {
	position: absolute;
	right: 0rem;
	top: 20rem;
	z-index: -1;

	@include breakpoint(baby-bear) {
		display: none;
	}
}

